--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,10 @@
         "illuminate/config": "^4.0",
         "illuminate/support": "^4.0"
     },
+    "require-dev": {
+        "mockery/mockery": "^1.3",
+        "phpunit/phpunit": "^4.8"
+    },
     "autoload": {
         "psr-4": {
             "Sarahman\\SmsService\\": "src/"
