--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "php": ">=5.5.34",
         "ext-curl": "*",
         "illuminate/config": "^4.0",
-        "illuminate/support": "^4.0"
+        "illuminate/support": "^4.0",
+        "illuminate/validation": "^4.0"
     },
     "require-dev": {
         "mockery/mockery": "^1.3",
