--- a/composer.json
+++ b/composer.json
@@ -13,15 +13,14 @@
             "email": "aabid048@gmail.com"
         }
     ],
-    "provide": {
-        "psr/http-message-implementation": "1.0"
-    },
     "require": {
         "php": ">=5.5.34",
         "ext-curl": "*",
+        "guzzlehttp/guzzle": "^6.5",
         "illuminate/config": "^4.0",
         "illuminate/support": "^4.0",
-        "illuminate/validation": "^4.0"
+        "illuminate/validation": "^4.0",
+        "psr/http-message-implementation": "*"
     },
     "require-dev": {
         "mockery/mockery": "^1.3",
