--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "illuminate/config": "^4.0",
         "illuminate/support": "^4.0",
         "illuminate/validation": "^4.0",
-        "psr/http-message-implementation": "*"
+        "psr/http-message-implementation": "*",
+        "sarahman/laravel-http-request-api-log": "^1.0"
     },
     "require-dev": {
         "mockery/mockery": "^1.3",
