Update .gitignore file.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
-/vendor/
+coverage/
+vendor/
 node_modules/
+coverage.xml
 npm-debug.log
+phpunit.xml
 yarn-error.log
 
 # Laravel 4 specific
@@ -15,9 +18,20 @@ public/hot
 public_html/storage
 public_html/hot
 
+composer.lock
+composer.phar
 storage/*.key
 .env
+
+# IDE and Platform Tools
+.DS_Store
 Homestead.yaml
 Homestead.json
-/.vagrant
+*.iml
+*.phpunit.result.cache
+.idea
+.vagrant
+.vscode
 .phpunit.result.cache
+.php-cs-fixer.php
+.php-cs-fixer.cache
