--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "SMS Gateway service library in PHP. Multiple providers of Bangladesh in one library",
     "keywords": ["sms", "gateway", "service", "providers", "framework", "laravel", "lumen"],
     "type": "library",
-    "version": "1.0.2",
+    "version": "1.0.3",
     "license": "MIT",
     "minimum-stability": "dev",
     "prefer-stable": true,
@@ -16,14 +16,14 @@
     "require": {
         "php": ">=5.5.34",
         "ext-curl": "*",
-        "guzzlehttp/guzzle": "^6.5",
-        "illuminate/support": "^4.0",
+        "guzzlehttp/guzzle": ">=6.5",
+        "illuminate/support": ">=4.0",
         "psr/http-message-implementation": "*",
         "sarahman/laravel-http-request-api-log": "^1.0"
     },
     "require-dev": {
-        "mockery/mockery": "^1.3",
-        "phpunit/phpunit": "^4.8"
+        "mockery/mockery": ">=1.3",
+        "phpunit/phpunit": ">=4.8"
     },
     "autoload": {
         "psr-4": {
